@@ -23,11 +23,12 @@ Affected files:
  common/arch.c button.c glue.c init.c item.c living.c logger.c los.c map.c object.c
   time.c treasure.c
  include/funcpoint.h libproto.h sproto.h
+ random_maps/standalone.c: add dummy functions for those externals.
  server/init.c: remove obsolete setup_library()
 
 Added a wrapper function for check_trigger from plugins.
  include/plugin.h: new function
- server/plugins.c: crapper for check_trigger.
+ server/plugins.c: wrapper for check_trigger.
 
 Ryo 2005-07-15
 
